# lotus

./: .gitignore  .gitmodules  2_hw_event_analyzer.py  CITATION.cff  CONTRIBUTION.md  Inefficiency_Analysis_Readme.md  LICENSE  Lotus GPU Idle Time Analysis.md  Lotus_c4130_cloudlab.profile  OOO_and wait_time_stats.ipynb  OOO_and wait_time_stats_pace.ipynb  P3Map.sh  README.md  REPLICATE.md  SETUP.md  b1024_gpu4.p3torch  b1024_gpu4_dataloader28_viz_trace.json  b1024_gpu4_minus_b256_gpu1_diff.csv  compare_pytorch_profiler_wait.ipynb  compare_two_vtune_configs_vary_dataloaders.ipynb  dataloader12_minus_dataloader8_diff.csv  dataloader24_minus_dataloader28_diff.csv  elapsed_time_plot.ipynb  func_tabular.py  gpu_time_analyze.ipynb  heat_map.csv  heat_map.py  high_level_python_func_plot_vary_dataloaders.ipynb  install_lotustrace.sh  install_torchvision.sh  log_out.txt  logsToMapping.ipynb  lotustrace_torchvision_setup.sh  mapping_funcs.json  max_batch_time.ipynb  max_batch_time_pace.ipynb  nohup.out  other_funcs.ipynb  setup_lotustrace_torchvision.sh  socket_mode.sh  (+4 more)
analysis_scripts/: batch_type_comparison.ipynb  cpu_times_comparison.ipynb  e2e_comparison.ipynb  gpu_times_comparison.ipynb  io_pinning_specific.ipynb  ooo_pinning_specific.ipynb  worker_inefficiency_specific.ipynb  worker_inefficiency_specific_io.ipynb
binaries/cloudlab/: cudnn-local-repo-ubuntu2004-8.7.0.84_1.0-1_amd64.deb
code/cpp_test/: README.md  setup_libtorch.sh  setup_opencv.sh
code/cpp_test/correctness_checker/: CMakeLists.txt  correctness_checker.cpp  python_test.py  setup.sh
code/cpp_test/example-app/: CMakeLists.txt  example-app.cpp  example_app.cpp  setup.sh
code/cpp_test/main_cpp_code/: CMakeLists.txt  config.ini  main.cpp  model_serialiser_tracing.py  output  setup.sh  visualiser.py
code/docker/: Dockerfile  customDataloaderWorker.py  requirements.txt  spawnContainer.py
code/lotus_rt/: log_mode.sh  socket_mode.sh
code/visualize_LotusTrace/: visualization_augmenter.py
code/visualize_P3Torch_trace/: visualization_augmenter.py
log_save/: dataloader.py  folder.py  transforms.py
logs/CenterCrop/: 6.csv
logs/ColorJitter/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
logs/ConvertImageDType/: 16.csv  8.csv
logs/ElasticTransform/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
logs/FiveCrop/: 9.csv
logs/GaussianBlur/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
logs/Grayscale/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
logs/Lambda/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
lotus_rt/: log_mode.sh  lotus_listener.py
operations/: CenterCrop.py  ColorJitter.py  ConvertImageDType.py  ElasticTransform.py  FiveCrop.py  GaussianBlur.py  Grayscale.py  Lambda.py  LinearTransformation.py  Normalize.py  PILToTensor.py  Pad.py  RandomAdjustSharpness.py  RandomAffine.py  RandomAutoContrast.py  RandomCrop.py  RandomEqualize.py  RandomErasing.py  RandomGrayscale.py  RandomHorizontalFlip.py  RandomInvert.py  RandomPerspective.py  RandomPosterize.py  RandomResizedCrop.py  RandomRotation.py  RandomSolarize.py  RandomVerticalFlip.py  Resize.py  TenCrop.py  ToPILImage.py  ToTensor.py
slides/: april 24th.pptx
socket_save/: fetch.py  folder.py  pytorch_main.py
(+925 files in other folders)
